--- a/articles/cdt/386286.md
+++ b/articles/cdt/386286.md
@@ -2,4 +2,4 @@
 [【图说天朝】有哪些国家/地区未提供 Netflix 服务？](https://chinadigitaltimes.net/chinese/662289.html)
 ------
 
-<p>2月3日，一张“有哪些国家/地区提供 Netflix 服务？”的截图在微博广传，这张图片来自<a href="https://help.netflix.com/zh-cn/node/14164" title="Netflix官方网站">Netflix官方网站</a>对世界上有哪些地方可以正常收看节目的解释，底部有一行小字“Netflix 目前还未在中国、克里米亚、朝鲜和叙利亚推出。”，而这些国家在地图上也被灰色标识。</p><p><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/02/image-1612337920383.png" alt="cdtimg"></noscript><img class="lazyload" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20210%20140%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/02/image-1612337920383.png" alt="cdtimg"></p><blockquote><p>@桭沐-：美丽世界的孤儿。</p><p>@你瞅你跟个斑马脑袋似的头头是道：除了种花和其它无名小国</p><p>@一盘小白亦：我们中国真的太厉害了！</p><p>@-加拉帕戈斯群岛-：责任全在美方</p><p>@一个要珍惜的昵称：这张图很容易让人误解朝鲜半岛有一半是中国的。</p><p>@一懵再懵再懵：伊朗能看，俄罗斯能看，古巴也能看，偏偏中国不能看，这是在离间我们和老朋友们的的关系啊！</p><p>@JOQO泽群_S：有人问我“请问中国有没有网飞？” 不少人纳闷，怎么能提出这种问题。 我肯定地说“有” 全场哗然，我看出了大家的疑惑，补充说了一句“中国的网飞，在我国的台湾省。”</p></blockquote><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/662289.html" data-a2a-title="【图说天朝】有哪些国家/地区未提供 Netflix 服务？"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
+<p>2月3日，一张“有哪些国家/地区提供 Netflix 服务？”的截图在微博广传，这张图片来自<a href="https://help.netflix.com/zh-cn/node/14164" title="Netflix官方网站">Netflix官方网站</a>对世界上有哪些地方可以正常收看节目的解释，底部有一行小字“Netflix 目前还未在中国、克里米亚、朝鲜和叙利亚推出”，而这些国家在地图上也被灰色标识。</p><p><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/02/image-1612337920383.png" alt="cdtimg"></noscript><img class="lazyload" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20210%20140%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/02/image-1612337920383.png" alt="cdtimg"></p><blockquote><p>@桭沐-：美丽世界的孤儿。</p><p>@你瞅你跟个斑马脑袋似的头头是道：除了种花和其它无名小国</p><p>@一盘小白亦：我们中国真的太厉害了！</p><p>@-加拉帕戈斯群岛-：责任全在美方</p><p>@一个要珍惜的昵称：这张图很容易让人误解朝鲜半岛有一半是中国的。</p><p>@一懵再懵再懵：伊朗能看，俄罗斯能看，古巴也能看，偏偏中国不能看，这是在离间我们和老朋友们的的关系啊！</p><p>@JOQO泽群_S：有人问我“请问中国有没有网飞？” 不少人纳闷，怎么能提出这种问题。 我肯定地说“有” 全场哗然，我看出了大家的疑惑，补充说了一句“中国的网飞，在我国的台湾省。”</p></blockquote><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/662289.html" data-a2a-title="【图说天朝】有哪些国家/地区未提供 Netflix 服务？"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F662289.html&amp;linkname=%E3%80%90%E5%9B%BE%E8%AF%B4%E5%A4%A9%E6%9C%9D%E3%80%91%E6%9C%89%E5%93%AA%E4%BA%9B%E5%9B%BD%E5%AE%B6%2F%E5%9C%B0%E5%8C%BA%E6%9C%AA%E6%8F%90%E4%BE%9B%20Netflix%20%E6%9C%8D%E5%8A%A1%EF%BC%9F" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
