--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-3 [世卫专家组访武汉病毒研究所](/articles/dw/1044092.md)
+
 2-3 [“坚持正确政治方向” 中国收紧自媒体言论](/articles/dw/1044093.md)
 
 2-3 [英国百岁高龄“汤姆上尉”因新冠去世](/articles/dw/1044094.md)
@@ -598,6 +600,4 @@
 1-19 [菅义伟施政演说：下决心办奥运会](/articles/dw/1044390.md)
 
 1-19 [德语媒体：中国体制的合法性来自哪里？](/articles/dw/1044391.md)
-
-1-18 [国际社会要求俄罗斯放人 莫斯科称西方虚伪](/articles/dw/1044392.md)
 
