--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-4 [互联网时代产业转型升级的两面性](/articles/ft/1046117.md)
+
 2-4 [字节跳动与腾讯再度开启诉讼大战](/articles/ft/1046118.md)
 
 2-4 [通用汽车因芯片短缺关闭三家工厂](/articles/ft/1046119.md)
@@ -598,6 +600,4 @@
 12-30 [特朗普施压参议院批准2000美元刺激支票](/articles/ft/1046415.md)
 
 12-30 [《巴黎协定》五周年，中国青年如何看待气候变化？](/articles/ft/1046416.md)
-
-12-30 [《管理华盛顿的人》：詹姆斯•贝克传](/articles/ft/1046417.md)
 
