--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-18 [美国新防长出席北约部长会议 期待与盟友一道应对中国挑战](/articles/voa/1042843.md)
+
 2-18 [被控为中国窃取情报的纽约藏裔警察染新冠获保释候审](/articles/voa/1042844.md)
 
 2-18 [美日澳印外长会晤 拜登政府沿用上届政府关键策略应对中国挑战](/articles/voa/1042845.md)
@@ -598,6 +600,4 @@
 2-7 [仰光发生大规模抗议示威 缅甸军方切断网络](/articles/voa/1043141.md)
 
 2-6 [中国官媒隐去布杨通话要点--北京破坏印太稳定必被追究](/articles/voa/1043142.md)
-
-2-6 [分析人士：北京连环重压 香港从“一国两制”走向“全面管治”](/articles/voa/1043143.md)
 
