--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-18 [得州油气产业不堪极寒冲击](/articles/ft/1046041.md)
+
 2-18 [BioNTech/辉瑞疫苗对南非变种效力较低](/articles/ft/1046042.md)
 
 2-18 [向英国人讲好中国故事之前，先明白中英文化差异](/articles/ft/1046043.md)
@@ -598,6 +600,4 @@
 1-7 [国会骚乱后特朗普承诺“有序过渡”](/articles/ft/1046339.md)
 
 1-7 [政府需通过干预加速疫苗生产](/articles/ft/1046340.md)
-
-1-7 [南非新冠病毒变体可能影响疫苗有效性](/articles/ft/1046341.md)
 
