--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-18 [【CDTV】恶心程度媲美北朝鲜的《TG有点甜》](/articles/cdt/385804.md)
+
 2-18 [Matters｜我不是猫的电影评论：赵亮的纪录片《上访》](/articles/cdt/385805.md)
 
 2-18 [奇客资讯｜中国计划扩大人工影响天气](/articles/cdt/385808.md)
@@ -598,6 +600,4 @@
 1-17 [案例与法理 |  释之先生：能以防疫之名乱来就能以任何借口为所欲为](/articles/cdt/386968.md)
 
 1-17 [案例与法理｜为何他们如此热衷于搞“战时状态”？](/articles/cdt/386969.md)
-
-1-17 [王学堂讲法律 | 公众对警察强奸案愤慨，难道仅仅因为判的轻么？](/articles/cdt/386970.md)
 
