--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-18 [香港媒体大亨黎智英国安案取保要求再次被拒](/articles/voa/1042840.md)
+
+2-18 [中国拒提供新冠病毒信息引发不安 全球性“大流行条约”提议确保更大透明度](/articles/voa/1042841.md)
+
+2-18 [美国与中国在欧洲争夺影响力](/articles/voa/1042842.md)
+
 2-18 [美国新防长出席北约部长会议 期待与盟友一道应对中国挑战](/articles/voa/1042843.md)
 
 2-18 [被控为中国窃取情报的纽约藏裔警察染新冠获保释候审](/articles/voa/1042844.md)
@@ -594,10 +600,4 @@
 2-7 [时事大家谈：强生、阿斯利康疫苗传喜讯 你要选择哪一种？](/articles/voa/1043138.md)
 
 2-7 [香港支联会农历年宵摊位首次被终止合约 被批国安法下人权自由倒退](/articles/voa/1043139.md)
-
-2-7 [时事大家谈：美国纾困方案为民众带来哪些帮助？](/articles/voa/1043140.md)
-
-2-7 [仰光发生大规模抗议示威 缅甸军方切断网络](/articles/voa/1043141.md)
-
-2-6 [中国官媒隐去布杨通话要点--北京破坏印太稳定必被追究](/articles/voa/1043142.md)
 
