--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-19 [“让盟国向北京说不” 美国在东南亚蓄势待发的疫苗外交](/articles/voa/1042834.md)
+
+2-19 [柬埔寨建立中国式“防火墙”，批评人士称其“人权的灾难”](/articles/voa/1042835.md)
+
+2-18 [受困经济衰退和疫情反扑 香港失业率创17年新高](/articles/voa/1042836.md)
+
 2-18 [陈时中：台湾购买疫苗一度受阻 疑与政治介入有关](/articles/voa/1042837.md)
 
 2-18 [缅甸不服从运动扩大，铁路罢工，政府机构瘫痪](/articles/voa/1042838.md)
@@ -594,10 +600,4 @@
 2-7 [昂山素季治下缅甸对中国经济依赖减轻 军政府面临西方制裁或投向北京](/articles/voa/1043132.md)
 
 2-7 [聊天程序Clubhouse中国爆红 墙内“乌托邦”能存续多久？](/articles/voa/1043133.md)
-
-2-7 [美印两军将举行联合训练演习](/articles/voa/1043134.md)
-
-2-7 [伊朗：制裁若不放松，核协议将更加危险](/articles/voa/1043135.md)
-
-2-7 [缅甸军方开始逮捕外籍人员](/articles/voa/1043136.md)
 
