--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-19 [分析人士称中国新《海警法》针对东南亚国家](/articles/voa/1042833.md)
+
 2-19 [“让盟国向北京说不” 美国在东南亚蓄势待发的疫苗外交](/articles/voa/1042834.md)
 
 2-19 [柬埔寨建立中国式“防火墙”，批评人士称其“人权的灾难”](/articles/voa/1042835.md)
@@ -598,6 +600,4 @@
 2-7 [数万缅甸人参加2007年以来规模最大的抗议示威](/articles/voa/1043131.md)
 
 2-7 [昂山素季治下缅甸对中国经济依赖减轻 军政府面临西方制裁或投向北京](/articles/voa/1043132.md)
-
-2-7 [聊天程序Clubhouse中国爆红 墙内“乌托邦”能存续多久？](/articles/voa/1043133.md)
 
