--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+2-19 [美台官方合作破获跨国集团利用免签证待遇赴美卖淫并通报加澳等国](/articles/rfi/1034433.md)
+
+2-19 [委内瑞拉收到首批10万剂俄罗斯疫苗， 开始接种](/articles/rfi/1034434.md)
+
+2-19 [印尼梅拉比火山喷发 爆大量岩浆引发轻微地震 – 法国国际广播电台 - RFI](/articles/rfi/1034435.md)
+
+2-19 [北京与台湾的疫苗之争 - 法国报纸摘要](/articles/rfi/1034436.md)
+
+2-19 [台湾向德国采购BNT疫苗暗潮汹涌 - 台北一周](/articles/rfi/1034437.md)
+
 2-19 [原奥运大臣桥本圣子出任东京奥组委主席](/articles/rfi/1034438.md)
 
 2-19 [高检高官王松苗空降香港中联办 大规模换班启动](/articles/rfi/1034439.md)
@@ -590,14 +600,4 @@
 2-14 [中国人为什么不愿生小孩了？](/articles/rfi/1034731.md)
 
 2-14 [谢淑薇35岁闯澳网8强 笑谈秘诀：假想只有18岁 – 法国国际广播电台 - RFI](/articles/rfi/1034732.md)
-
-2-14 [法广2021年2月14日第二次播音 北京时间19点至20点 - 第二次播音 北京时间 19:00-20:00](/articles/rfi/1034733.md)
-
-2-14 [参议院表决特朗普无罪 拜登惋惜“民主很脆弱” - 法国报纸摘要](/articles/rfi/1034734.md)
-
-2-14 [媒体观察：中美价值观与政治动荡 - 曼谷专栏](/articles/rfi/1034735.md)
-
-2-14 [台湾各界就「武汉肺炎」名称展开论战](/articles/rfi/1034736.md)
-
-2-14 [二次弹劾失败 特朗普无罪 拜登怎么回应？](/articles/rfi/1034737.md)
 
