--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-19 [中国缺煤限电危机未解 专家：主要由国内政治因素所致](/articles/voa/1042807.md)
+
 2-19 [中国提升新闻发言人人数和级别以强化宣传平台](/articles/voa/1042808.md)
 
 2-19 [加拿大称对特朗普干预孟晚舟案的指责已无关紧要](/articles/voa/1042809.md)
@@ -598,6 +600,4 @@
 2-9 [日本政府抗议中国海警船连续两天进入有争议岛屿海域](/articles/voa/1043105.md)
 
 2-9 [时事大家谈: 拜登对华政策的关键：美国能否拉起民主同盟？](/articles/voa/1043106.md)
-
-2-9 [如何看懂特朗普二次弹劾审判的争议与重点？](/articles/voa/1043107.md)
 
