--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-19 [雷诺去年亏损80亿欧元](/articles/ft/1046032.md)
+
 2-19 [比特币和黄金为何走势相反？](/articles/ft/1046033.md)
 
 2-19 [意大利调查12.5亿欧元对华采购案](/articles/ft/1046034.md)
@@ -598,6 +600,4 @@
 1-8 [冲击国会、假新闻与社交媒体监管](/articles/ft/1046330.md)
 
 1-8 [你是否误解了“法式”家居？](/articles/ft/1046331.md)
-
-1-8 [拜登政府有机会扭转美国不平等加剧趋势](/articles/ft/1046332.md)
 
