--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-19 [德国政府警告北京长臂管辖在德港人](/articles/dw/1043805.md)
+
 2-19 [汉堡物理学家：“我99.9％确信新冠病毒来自实验室”](/articles/dw/1043806.md)
 
 2-19 [抗议军政府 缅甸少女中弹身亡](/articles/dw/1043807.md)
@@ -598,6 +600,4 @@
 2-2 [昂山素季与缅甸的民主运动](/articles/dw/1044103.md)
 
 2-2 [德语媒体：西方应该害怕中国崛起吗?](/articles/dw/1044104.md)
-
-2-2 [缅甸政变后：中国看戏 西方焦急](/articles/dw/1044105.md)
 
