--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-24 [北戴河桃罐头厂电影修士会｜中国调解节目到底有多阴间？](/articles/cdt/385625.md)
+
 2-24 [槽边往事｜最有文化的吐槽选手许知远](/articles/cdt/385626.md)
 
 2-24 [【CDTV】波特王｜台湾人过个春节也被出征？农历春节只有中国人能过？](/articles/cdt/385627.md)
@@ -598,6 +600,4 @@
 1-23 [三尺Bmagazine | 封城一周年：50条新闻记录时代的现实与魔幻](/articles/cdt/386755.md)
 
 1-24 [服务业劳洞 | 户籍=核酸：打工的人，没有权利回家](/articles/cdt/386760.md)
-
-1-23 [【立此存照】新华微评：危难时刻，党和政府永远是最坚强的依靠](/articles/cdt/386761.md)
 
