--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-24 [中印边境打归打 两国经贸无大碍](/articles/rfi/1034101.md)
+
+2-24 [中国国药疫苗攻破欧盟 第一国匈牙利今天开打](/articles/rfi/1034102.md)
+
 2-24 [海航信评再遭棒打跌至C](/articles/rfi/1034103.md)
 
 2-24 [北京中南海近旁昨发生爆炸](/articles/rfi/1034104.md)
@@ -596,8 +600,4 @@
 2-20 [香港司法系统最近在朝着惩罚性的方向偏移 - 法国世界报](/articles/rfi/1034399.md)
 
 2-20 [拜登直指北京破坏规则经济滥用](/articles/rfi/1034400.md)
-
-2-20 [美国宣告“重返”大西洋联盟 - 要闻分析](/articles/rfi/1034401.md)
-
-2-20 [七国集团峰会承诺向贫穷国家提供疫苗款项增至75亿美元](/articles/rfi/1034402.md)
 
