--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-25 [中国又有两款新冠疫苗申请上市 或有助于中国“疫苗外交”](/articles/voa/1042679.md)
+
 2-24 [美日不满中国实施海警法 北京称美日安保条约是冷战产物](/articles/voa/1042680.md)
 
 2-24 [香港公布民主派议员总辞后的首份财政预算 首笔国安开支80亿港元](/articles/voa/1042681.md)
@@ -598,6 +600,4 @@
 2-12 [拜登：中国将“吃我们的午餐](/articles/voa/1042977.md)
 
 2-12 [奔向自由，香港青年只身跨越半个地球逃亡美国](/articles/voa/1042978.md)
-
-2-12 [前苏联间谍工具在比弗利山庄拍卖](/articles/voa/1042979.md)
 
