--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-24 [美国将联手台日韩澳 打造去中供应链](/articles/rfa/1046309.md)
+
+2-24 [家人被困新疆音讯全无   哈族妇女中国总领馆外集会](/articles/rfa/1046310.md)
+
 2-24 [香港财政告急   如何力挽外资信心？](/articles/rfa/1046311.md)
 
 2-24 [邱太三抛春暖花开 国台办回应东风、雨露就是九二共识](/articles/rfa/1046312.md)
@@ -596,8 +600,4 @@
 1-25 [内蒙原信访首长：访民必须打  但不能死在监狱](/articles/rfa/1046607.md)
 
 1-25 [IBM中国研究院悄然关闭    国际电机巨头撤离深圳](/articles/rfa/1046608.md)
-
-1-25 [美国新政府上任 北京连两天共28架次军机扰台](/articles/rfa/1046609.md)
-
-1-25 [车用电子芯片全球大缺货 美日德向台湾求援](/articles/rfa/1046610.md)
 
