--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-25 [美加两国领导人举行双边会议  宣示共同抵御中国威胁](/articles/rfa/1046306.md)
+
+2-25 [中国制口罩再度引发质疑 法国多家医院停用](/articles/rfa/1046307.md)
+
+2-25 [新疆伊宁天主堂面临强拆 知情者谈当地宗教政策](/articles/rfa/1046308.md)
+
 2-24 [美国将联手台日韩澳 打造去中供应链](/articles/rfa/1046309.md)
 
 2-24 [家人被困新疆音讯全无   哈族妇女中国总领馆外集会](/articles/rfa/1046310.md)
@@ -594,10 +600,4 @@
 1-26 [习近平世界经济论坛批美  乐施会发表世界不平等报告](/articles/rfa/1046604.md)
 
 1-26 [加拿大国会复会  将讨论新疆维吾尔遭种族灭绝](/articles/rfa/1046605.md)
-
-1-26 [台湾狱政史先例：监察院将视频受理服刑人陈情](/articles/rfa/1046606.md)
-
-1-25 [内蒙原信访首长：访民必须打  但不能死在监狱](/articles/rfa/1046607.md)
-
-1-25 [IBM中国研究院悄然关闭    国际电机巨头撤离深圳](/articles/rfa/1046608.md)
 
