--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-2 [恒生指数将洗牌 纳入更多内地成分股](/articles/ft/1045966.md)
+
 3-1 [LIBOR退出，离岸美元影响几何？](/articles/ft/1045967.md)
 
 3-1 [欧盟如何解救“困在系统里”的平台工人](/articles/ft/1045968.md)
@@ -598,6 +600,4 @@
 1-18 [拜登计划一上任就立即逆转特朗普的一些政策](/articles/ft/1046264.md)
 
 1-18 [对同业存单信用分层的风险提示与建议](/articles/ft/1046265.md)
-
-1-18 [MBA学生如何应对疫情之年](/articles/ft/1046266.md)
 
