--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-2 [“释放政治犯”：香港数百人抗议民主派被捕](/articles/nyt/1047131.md)
+
 3-2 [为什么习近平仍对香港穷追不舍？](/articles/nyt/1047132.md)
 
 3-2 [简报：中国加快推进数字人民币；香港罕见再现抗议活动](/articles/nyt/1047133.md)
@@ -598,6 +600,4 @@
 12-16 [简报：国际刑事法院不调查新疆拘禁营；四川一飞行员确诊](/articles/nyt/1047429.md)
 
 12-16 [国际刑事法院决定不对中国拘禁穆斯林展开调查](/articles/nyt/1047430.md)
-
-12-15 [世界上最重要的地方：台湾](/articles/nyt/1047431.md)
 
