--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-2 [美国AI国家安全委员会：美或失去半导体领域优势地位](/articles/ft/1045963.md)
+
 3-2 [法国前总统萨科齐因腐败被判入狱](/articles/ft/1045964.md)
 
 3-2 [标普500指数创下去年6月以来最大单日涨幅](/articles/ft/1045965.md)
@@ -598,6 +600,4 @@
 1-18 [去年第四季度中国经济增速高于疫情爆发前水平](/articles/ft/1046261.md)
 
 1-18 [中国股市：焦灼的“分化”](/articles/ft/1046262.md)
-
-1-18 [纳瓦尔尼回俄罗斯后被警方拘留](/articles/ft/1046263.md)
 
