--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-2 [监控无人机、黑客软件：缅甸军方镇压行动的数字武器库](/articles/nyt/1047128.md)
+
 3-2 [泰裔老人遇袭惨死后，美国亚裔的团结抗争](/articles/nyt/1047129.md)
 
 3-2 [中国最新的经济实验：数字人民币](/articles/nyt/1047130.md)
@@ -598,6 +600,4 @@
 12-16 [足不出户行天下：假装在东京](/articles/nyt/1047426.md)
 
 12-16 [韩国十多名快递员疑“过劳死”，引发劳工保护反思](/articles/nyt/1047427.md)
-
-12-16 [日本“Twitter杀手”被判死刑：杀害九人并分尸](/articles/nyt/1047428.md)
 
