--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,9 @@
 
 3-23 [奇客资讯｜加速主义关键词遭遇有组织的水军污染和攻击](/articles/cdt/384662.md)
 
-3-23 [【异闻观止】外交部回应美欧加英制裁：终将为其愚蠢和傲慢付出代价](/articles/cdt/384667.md)
+3-23 [【404文库】红星新闻｜独家对话”敲诈多名公职人员”女辅警父亲](/articles/cdt/384666.md)
+
+3-23 [【网络民议】外交部回应美欧加英制裁：终将为其愚蠢和傲慢付出代价](/articles/cdt/384667.md)
 
 3-23 [【麻辣总局】面对俄国女记者的提问 他掏出了自己的小本本儿](/articles/cdt/384672.md)
 
@@ -598,6 +600,4 @@
 2-9 [耿潇男：我以自由为人生的标配](/articles/cdt/386051.md)
 
 2-9 [【立此存照】胡锡进：完全不受控的互联网言论平台在今天中国不可能出现](/articles/cdt/386055.md)
-
-2-9 [【旧文重温】Matters｜黄章晋：再见，伊力哈木](/articles/cdt/386056.md)
 
