--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-23 [公开悼念六四、反对国安法     广东维权人士张五洲遭判刑](/articles/rfa/1046079.md)
+
 3-23 [美众议员致函拜登呼吁与台签自贸协议](/articles/rfa/1046080.md)
 
 3-23 [中国产疫苗信不过  地方官强制居民接种](/articles/rfa/1046081.md)
@@ -598,6 +600,4 @@
 2-18 [蚂蚁IPO叫停揭密  习近平忌惮太子党财团？](/articles/rfa/1046377.md)
 
 2-18 [美中UN交锋: 布林肯谈人权 王毅推疫苗外交](/articles/rfa/1046378.md)
-
-2-18 [“习近平女儿信息泄露案”   家长公开信喊冤](/articles/rfa/1046379.md)
 
