--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-24 [不满中国反制裁     欧中投资协定审议被叫停](/articles/rfa/1046071.md)
+
+3-24 [证据如山  中共反驳国际制裁愈显无力](/articles/rfa/1046072.md)
+
 3-24 [中国战狼满世界咆啸  重回文革变国际孤狼？](/articles/rfa/1046073.md)
 
 3-24 [民营企业家李怀庆家属控告警方罗织罪名、侵占私产](/articles/rfa/1046074.md)
@@ -596,8 +600,4 @@
 2-19 [美议员重提《防止台湾遭侵略法案》](/articles/rfa/1046369.md)
 
 2-19 [波罗的海小国担心北京欲主导世界  荷兰比利时质疑中国扫描设备](/articles/rfa/1046370.md)
-
-2-18 [“反美”教授陈平得州安家 遭嘲反美是工作 赴美是生活](/articles/rfa/1046371.md)
-
-2-18 [国民党主席江启臣 获选《时代》杂志次世代领导人](/articles/rfa/1046372.md)
 
