--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 3-24 [【异闻观止】网信中国｜国家网信办：2月以来下架App520余个](/articles/cdt/384632.md)
 
+3-24 [极昼工作室 | 不服从的一刻钟](/articles/cdt/384633.md)
+
 3-24 [德国之声 | 中法外交冲突升级 “战狼”被召见](/articles/cdt/384644.md)
 
 3-24 [美国之音 | 美英欧加联手制裁中国新疆官员，拜登“盟友外交”打响第一炮](/articles/cdt/384646.md)
@@ -598,6 +600,4 @@
 2-10 [Fuck GFW｜ClubHouse被封后如何翻墙听？Shadowrocket上的相关设置](/articles/cdt/386044.md)
 
 2-10 [界面新闻 | 马金瑜回应质疑：我怕被笑话，不愿承认自己是弱者](/articles/cdt/386046.md)
-
-2-10 [PKUhumanrights | Clubhouse用不了？外交部：中国互联网是开放的](/articles/cdt/386047.md)
 
