--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-24 [成年女性试穿优衣库童装引发身材羞辱争议](/articles/nyt/1047051.md)
+
 3-24 [肛拭子、隔离和中国疫苗：为何外国人入境中国如此困难](/articles/nyt/1047052.md)
 
 3-24 [如何代表亚裔美国人？杨安泽竞选纽约市长面临考验](/articles/nyt/1047053.md)
@@ -598,6 +600,4 @@
 1-6 [简报：特朗普对支付宝等应用下禁令；华融赖小民被判死刑](/articles/nyt/1047349.md)
 
 1-6 [中国华融前董事长赖小民被判处死刑](/articles/nyt/1047350.md)
-
-1-6 [特朗普封禁支付宝、微信支付等八款中国应用程序](/articles/nyt/1047351.md)
 
