--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+3-24 [我父母这代亚裔认为我们只能自保，我不这么想](/articles/nyt/1047049.md)
+
+3-24 [中国不再尊重美国，他们有理由这样做](/articles/nyt/1047050.md)
+
 3-24 [成年女性试穿优衣库童装引发身材羞辱争议](/articles/nyt/1047051.md)
 
 3-24 [肛拭子、隔离和中国疫苗：为何外国人入境中国如此困难](/articles/nyt/1047052.md)
@@ -596,8 +600,4 @@
 1-6 [从火星到月球，一个忙碌的太空探索之年](/articles/nyt/1047347.md)
 
 1-6 [香港警方逮捕数十名民主派官员和活动人士](/articles/nyt/1047348.md)
-
-1-6 [简报：特朗普对支付宝等应用下禁令；华融赖小民被判死刑](/articles/nyt/1047349.md)
-
-1-6 [中国华融前董事长赖小民被判处死刑](/articles/nyt/1047350.md)
 
