--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-24 [用疫苗夺台友邦？巴拉圭批评中国胁迫与台湾断交换疫苗](/articles/rfa/1046064.md)
+
+3-24 [宁夏再现“合村并寺”大举措 近百座清真寺将关停拆除](/articles/rfa/1046065.md)
+
 3-24 [公开上海公务员餐厅饭菜价格被指“泄密” 网民被抓](/articles/rfa/1046066.md)
 
 3-24 [《理大围城》获选台湾国际纪录片影展开幕片 策展人：不要忘了香港](/articles/rfa/1046067.md)
@@ -596,8 +600,4 @@
 2-19 [中国刚宣布进入小康社会       地方政府却带头“过紧日子”](/articles/rfa/1046362.md)
 
 2-19 [深圳二手房价全国居首  推手是谁？](/articles/rfa/1046363.md)
-
-2-19 [韩国前外交官：夹在美中之间的韩国应向美靠拢](/articles/rfa/1046364.md)
-
-2-19 [宗教“中国化”抵达海南 穆斯林受打压](/articles/rfa/1046365.md)
 
