--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+3-24 [矽谷自动驾驶卡车初创公司Kodiak与中国激光雷达制造商禾赛科技达成合作](/articles/reuters/1040147.md)
+
 3-24 [哔哩哔哩将于3月29日首日挂牌 相关期货期权、衍生权证及沽空同日推出](/articles/reuters/1040148.md)
 
 3-24 [缅甸军政府释放数百名示威者 仰光发动无声罢工（更新版）](/articles/reuters/1040149.md)
@@ -598,6 +600,4 @@
 3-17 [焦点：疫情支票怎么花？ 提心吊胆的美国人打算用来还债和交税](/articles/reuters/1040445.md)
 
 3-17 [百度赴香港第二上市招股价定价252港元 集资30.8亿美元--消息](/articles/reuters/1040446.md)
-
-3-17 [亚股追随美股回落 投资者等待美联储会议结果](/articles/reuters/1040447.md)
 
