--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-25 [美国证交会开始推出将中国公司摘牌的规定](/articles/voa/1041999.md)
+
+3-25 [研究报告：美国未能有效对抗中国的地缘政治崛起](/articles/voa/1042000.md)
+
 3-25 [美官员：世卫组织新冠病毒源头调查需要进一步研究](/articles/voa/1042001.md)
 
 3-25 [朝鲜试射导弹 是对拜登的挑衅吗？](/articles/voa/1042002.md)
@@ -596,8 +600,4 @@
 3-17 [英国公布外交国防政策检视报告 向印太地区倾斜抗衡中国](/articles/voa/1042297.md)
 
 3-17 [中国加强网络控制“再下一城” 加密通讯应用程序Signal疑似被封](/articles/voa/1042298.md)
-
-3-16 [联合国：缅甸政变导致食品和燃料价格上涨](/articles/voa/1042299.md)
-
-3-16 [美国要求中国改善与澳大利亚关系 否则美中关系不会改善](/articles/voa/1042300.md)
 
