--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-25 [香港暂停接种复必泰新冠疫苗，发现包装瑕疵](/articles/nyt/1047045.md)
+
 3-25 [普京总统写真的艺术](/articles/nyt/1047046.md)
 
 3-25 [简报：H&M在中国遭抵制；香港暂停接种复必泰新冠疫苗](/articles/nyt/1047047.md)
@@ -598,6 +600,4 @@
 1-7 [香港大抓捕展示中共权力与铁腕](/articles/nyt/1047343.md)
 
 1-7 [简报：特朗普支持者冲击国会大厦；香港一日之内逮捕53人](/articles/nyt/1047344.md)
-
-1-6 [那些可耻的“政变策划者”共和党人](/articles/nyt/1047345.md)
 
