--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-25 [歪脑 | 谁拉黑了中国棉花？披着狼皮的新疆棉](/articles/cdt/384590.md)
+
 3-25 [【旧闻重温】杜绍斐 DUSHAOFEI | 血色棉花：用生命堆砌的6万亿白色帝国](/articles/cdt/384600.md)
 
 3-25 [玖奌杂货铺 | 方方兑现承诺，捐出日记全部稿酬](/articles/cdt/384604.md)
@@ -598,6 +600,4 @@
 2-11 [德国之声 | 美方不接受世卫调查结果 遭北京与世卫专家回怼](/articles/cdt/386026.md)
 
 2-10 [中央通讯社｜Clubhouse被封中国官媒称片面反华非言论自由](/articles/cdt/386030.md)
-
-2-10 [【旧闻重温】“胡编生成器”上线  一秒生成“胡锡进体”评论文](/articles/cdt/386031.md)
 
