--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+3-25 [中国科技股因监管担忧大幅下跌](/articles/ft/1045848.md)
+
+3-25 [中国股市由领跑者变为落后者](/articles/ft/1045849.md)
+
 3-25 [朝鲜几天内进行两次武器试验](/articles/ft/1045850.md)
 
 3-25 [蚂蚁集团寻求重振估值](/articles/ft/1045851.md)
@@ -596,8 +600,4 @@
 2-2 [Reddit“股民起义”会撼动华尔街吗？](/articles/ft/1046146.md)
 
 2-2 [正在改变的秩序：GME逼空折射美国社会风险](/articles/ft/1046147.md)
-
-2-1 [拜登的复苏计划可能遭遇墨菲定律](/articles/ft/1046148.md)
-
-2-1 [“逼空大战”：为何难以起诉散户？](/articles/ft/1046149.md)
 
