--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-30 [美台关系大跃进? 专家:莫过度解读](/articles/dw/1043251.md)
+
+3-30 [「12港人案」律师再遭打压 称维权律师社群已「乾掉」](/articles/dw/1043252.md)
+
 3-30 [「长赐号」顺利脱困 苏伊士运河恢复通行](/articles/dw/1043253.md)
 
 3-30 [中国欢迎联合国访问新疆　真的吗？](/articles/dw/1043254.md)
@@ -596,8 +600,4 @@
 3-7 [七张图看一周大事](/articles/dw/1043549.md)
 
 3-7 [德语媒体：中国崛起将受阻](/articles/dw/1043550.md)
-
-3-7 [评论：金熊奖获奖电影“不只是黄片”](/articles/dw/1043551.md)
-
-3-6 [世卫反对疫苗护照 专家预计疫情明年初结束](/articles/dw/1043552.md)
 
