--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-30 [H&M与新疆棉：中国如何掀起一场爱国愤怒风暴](/articles/nyt/1047025.md)
+
 3-30 [美国如何赢得与中国的冷战？](/articles/nyt/1047026.md)
 
 3-30 [WHO新冠溯源报告未解答关键问题](/articles/nyt/1047027.md)
@@ -598,6 +600,4 @@
 1-12 [简报：民主党人提交弹劾条款；台湾新护照淡化中华民国](/articles/nyt/1047323.md)
 
 1-11 [武汉封城临近周年，中共力推抗疫胜利叙事](/articles/nyt/1047324.md)
-
-1-11 [被Twitter封杀后，特朗普要去哪里寻求关注？](/articles/nyt/1047325.md)
 
