--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-4 [Just Fist It | 声援肖美丽：我们是被猎杀的女巫的女儿中的一个，愤怒是我们的美德](/articles/cdt/384166.md)
+
 4-3 [【网络民议】H&M因“问题地图”遭当局约谈    网民：欲加之罪](/articles/cdt/384168.md)
 
 4-3 [风传媒 |   揭新疆维族惨况遭抹黑“女汉奸”26岁前记者许秀中：我会写到“教培中心”关门为止](/articles/cdt/384170.md)
@@ -598,6 +600,4 @@
 2-21 [大象公会｜当作家，为什么要进作协](/articles/cdt/385746.md)
 
 2-20 [自由亚洲 | 陈光诚：特别关注李翘楚：临沂市看守所异常邪恶](/articles/cdt/385747.md)
-
-2-20 [华尔街日报 | 蚂蚁IPO被叫停的另一个原因：潜在受益的权贵人物在调查中浮出水面（节选）](/articles/cdt/385748.md)
 
