--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-4 [Matters | William：关于新疆的种种疑问——回应一些主要的质疑](/articles/cdt/384160.md)
+
 4-4 [Just Fist It | 声援肖美丽：我们是被猎杀的女巫的女儿中的一个，愤怒是我们的美德](/articles/cdt/384166.md)
 
 4-3 [【网络民议】H&M因“问题地图”遭当局约谈    网民：欲加之罪](/articles/cdt/384168.md)
@@ -598,6 +600,4 @@
 2-21 [【旧闻重温】何清涟｜一部伟大的现实魔幻主义作品：2.20茉莉花革命](/articles/cdt/385745.md)
 
 2-21 [大象公会｜当作家，为什么要进作协](/articles/cdt/385746.md)
-
-2-20 [自由亚洲 | 陈光诚：特别关注李翘楚：临沂市看守所异常邪恶](/articles/cdt/385747.md)
 
