--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-4 [调查：近五分之一美国人无法支付医疗费用](/articles/dw/1043165.md)
+
+4-4 [德国计划归还被掠夺贝宁青铜器](/articles/dw/1043166.md)
+
+4-4 [打破藩籬：她帮助印尼妇女脱贫](/articles/dw/1043167.md)
+
 4-3 [紫色——不仅是复活节期间的世上最贵重颜色](/articles/dw/1043168.md)
 
 4-3 [德语媒体：面对中国 西方不能当弱者](/articles/dw/1043169.md)
@@ -594,10 +600,4 @@
 3-18 [“查理”式幽默引发众议](/articles/dw/1043463.md)
 
 3-18 [种族歧视？美国按摩店多名亚裔遇袭身亡](/articles/dw/1043464.md)
-
-3-18 [疫苗安全疑虑续延烧 世卫与EMA力挺阿斯利康](/articles/dw/1043465.md)
-
-3-18 [台湾如何在电动车产业中找到优势？](/articles/dw/1043466.md)
-
-3-18 [囚徒纳瓦尔尼的狱中屈辱生活](/articles/dw/1043467.md)
 
